# kafka-to-databricks-dlt

./: .gitignore  README.md  costs_azure.ps1
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: dab-deploy.yml  dab-destroy.yml  kafka-consumer.yml  kafka-producer.yml  terraform-apply.yml  terraform-destroy.yml  terraform-plan.yml  terraform-state-import.yml  terraform-state-rm.yml
OLD/kafka_dr_demo/kafka_topic_dr/: POETRY.md  README.md  databricks.yml  pyproject.toml
OLD/kafka_dr_demo/kafka_topic_dr/resources/: kafka_topic_dr_job.yml  kafka_topic_dr_pipeline.yml
OLD/kafka_dr_demo/kafka_topic_dr/src/: dlt_pipeline.ipynb  notebook.ipynb
OLD/kafka_dr_demo/kafka_topic_dr/src/kafka_topic_dr/: databricks_common.py  kafka_common.py  main.py
OLD/kafka_dr_demo/kafka_topic_dr/tests/: main_test.py
OLD/kafka_dr_dlt/: README.md  setup.py  (+1 more)
OLD/kafka_dr_pipeline_dab/: POETRY.md  README.md  databricks.yml  pyproject.toml
OLD/kafka_dr_pipeline_dab/resources/: kafka_dr_pipeline_databricks.yml
OLD/kafka_dr_pipeline_dab/src/: avro.py  job.py  kafka_common.py  kafka_dr_pipeline.1.py  kafka_dr_pipeline.py
OLD/kafka_topic_dr_pipeline/: README.md  databricks.yml  pyproject.toml
OLD/kafka_topic_dr_pipeline/dlt_kafka_topics/: dlt_pipeline.py
aiven_kafka/: kafka_common.py  kafka_consumer_avro.py  kafka_faker.py  kafka_producer_avro.py  requirements.txt
kafka_topic_dr_pipeline/: databricks.yml
scripts/: CLI.md  databricks-bundle-deploy.sh  databricks-bundle-validate.sh  databricks-cli-create-secret-scope.sh  databricks-cli-login.sh  databricks-generate-dab.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+53 files in other folders)
